--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^3.5.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
